[package]
name = "p2p_chat"
version = "3.0.0"
edition = "2021"
description = "Encrypted peer-to-peer terminal chat — X25519 + AES-256-GCM"

[dependencies]
# Async runtime
tokio        = { version = "1",    features = ["full"] }

# Serialisation
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"

# CLI argument parsing
clap         = { version = "4",    features = ["derive"] }

# Terminal control — raw mode, cursor movement, event reading
crossterm    = "0.27"

# Timestamps
chrono       = "0.4"

# ── Cryptography ──────────────────────────────────────────────────────────────
x25519-dalek = { version = "2",    features = ["static_secrets"] }
aes-gcm      = "0.10"
sha2         = "0.10"
base64       = "0.22"
rand         = "0.8"
